phase3 이미지 카드 프레임 제거 및 리소스 버전 갱신

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -17,9 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../../assets/css/main.css?v=2.5" />
-  <link rel="stylesheet" href="../../assets/css/responsive.css?v=2.5" />
-  <link rel="stylesheet" href="../../assets/css/components.css?v=2.5" />
+  <link rel="stylesheet" href="../../assets/css/main.css?v=2.6" />
+  <link rel="stylesheet" href="../../assets/css/responsive.css?v=2.6" />
+  <link rel="stylesheet" href="../../assets/css/components.css?v=2.6" />
 </head>
 
 <body class="sidebar-layout">
@@ -75,7 +75,7 @@
           </nav>
 
           <!-- PHASE 3: Prototype Development -->
-          <div class="challenge-section">
+          <div class="challenge-section phase3-no-frame">
             <span class="challenge-phase-label">Phase 3: 시제품 개발</span>
             <h2 class="challenge-title">
               실시간 <strong>안구 계측 시스템</strong>
@@ -340,7 +340,7 @@
       window.location.replace("overview.html#phase-3");
     }
   </script>
-  <script src="../../assets/js/main.js?v=2.5" defer></script>
+  <script src="../../assets/js/main.js?v=2.6" defer></script>
 </body>
 
 </html>
