--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css?v=2.6" />
-  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.6" />
-  <link rel="stylesheet" href="../assets/css/components.css?v=2.6" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=2.7" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.7" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=2.7" />
 </head>
 
 <body class="sidebar-layout">
@@ -234,7 +234,7 @@
             <div class="story-connector"></div>
 
             <!-- PHASE 4: AI Disease Prediction -->
-            <div class="challenge-section">
+            <div class="challenge-section phase4-no-frame">
               <span class="challenge-phase-label">Phase 4: AI Disease Prediction</span>
               <h2 class="challenge-title">
                 Pupil Response-based <strong>AI Biomarkers</strong>
@@ -391,7 +391,7 @@
       window.location.replace("overview.html#phase-3");
     }
   </script>
-  <script src="../assets/js/main.js?v=2.6" defer></script>
+  <script src="../assets/js/main.js?v=2.7" defer></script>
 </body>
 
 </html>
