--- a/research/overview.html
+++ b/research/overview.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css?v=2.8" />
-  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.8" />
-  <link rel="stylesheet" href="../assets/css/components.css?v=2.8" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=2.9" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.9" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=2.9" />
 </head>
 
 <body class="sidebar-layout">
@@ -146,20 +146,17 @@
                         font-size: 0.9rem;
                         color: #94a3b8;
                         text-align: center;
-                        white-space: nowrap;
-                        height: 1.4em;
-                        line-height: 1.4em;
+                        line-height: 1.4;
                         overflow: hidden;
                         transform: translateX(3mm);
                       " data-gabor-caption="true" data-caption-start="1" data-caption-end="30" data-caption-frames="30"
                     data-caption-duration="4500">
-                    <span class="gabor-caption-label">spatial frequency:</span>
-                    <span class="gabor-caption-value" style="
+                    <span class="gabor-caption-label challenge-caption-fixed">spatial frequency:</span>
+                    <span class="challenge-caption-dynamic"><span class="gabor-caption-value" style="
                           display: inline-block;
                           min-width: 2ch;
                           text-align: right;
-                        ">1</span>
-                    <span class="gabor-caption-unit">cpd</span>
+                        ">1</span> <span class="gabor-caption-unit">cpd</span></span>
                   </figcaption>
                 </figure>
                 <figure class="challenge-figure-item">
@@ -183,19 +180,16 @@
                         font-size: 0.9rem;
                         color: #94a3b8;
                         text-align: center;
-                        white-space: nowrap;
-                        height: 1.4em;
-                        line-height: 1.4em;
+                        line-height: 1.4;
                         overflow: hidden;
                         transform: translateX(-3.5mm);
                       " data-temporal-caption="true">
-                    <span class="gabor-caption-label">temporal frequency:</span>
-                    <span class="temporal-caption-value" style="
+                    <span class="gabor-caption-label challenge-caption-fixed">temporal frequency:</span>
+                    <span class="challenge-caption-dynamic"><span class="temporal-caption-value" style="
                           display: inline-block;
                           min-width: 2ch;
                           text-align: right;
-                        ">1</span>
-                    <span class="gabor-caption-unit">Hz</span>
+                        ">1</span> <span class="gabor-caption-unit">Hz</span></span>
                   </figcaption>
                 </figure>
               </div>
@@ -340,14 +334,14 @@
                   <figure
                     style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img loading="lazy" src="../assets/images/research/phase2/led_flicker.gif" alt="LED Circuit"
-                      style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;">
+                      style="width: 100%; height: 220px; object-fit: contain; object-position: center 56%; display: block;">
                     <figcaption class="overview-figcaption">LED
                       Control Circuit Diagram</figcaption>
                   </figure>
                   <figure
                     style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <picture><source srcset="../assets/images/research/phase2/peripheral_prototype.webp" type="image/webp"><img loading="lazy" src="../assets/images/research/phase2/peripheral_prototype.gif" alt="Prototype"
-                        style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;"></picture>
+                        style="width: 100%; height: 220px; object-fit: contain; object-position: center 56%; display: block;"></picture>
                     <figcaption class="overview-figcaption">
                       Peripheral Retinal Full-correction Prototype</figcaption>
                   </figure>
@@ -355,13 +349,13 @@
               </div>
             </div>
           </div>
-          <div id="advanced-phase-mount" class="advanced-phase-content" data-advanced-phase-source="overview-advanced.html?v=2.4"></div>
+          <div id="advanced-phase-mount" class="advanced-phase-content" data-advanced-phase-source="overview-advanced.html?v=2.9"></div>
         </div>
       </div>
     </section>
   </main>
 
-  <script src="../assets/js/main.js?v=2.8" defer></script>
+  <script src="../assets/js/main.js?v=2.9" defer></script>
 </body>
 
 </html>
