도전과제 Phase1-4 데스크탑/모바일 이미지 정렬 및 배율 보정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -17,9 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../../assets/css/main.css?v=2.9" />
-  <link rel="stylesheet" href="../../assets/css/responsive.css?v=2.9" />
-  <link rel="stylesheet" href="../../assets/css/components.css?v=2.9" />
+  <link rel="stylesheet" href="../../assets/css/main.css?v=3.0" />
+  <link rel="stylesheet" href="../../assets/css/responsive.css?v=3.0" />
+  <link rel="stylesheet" href="../../assets/css/components.css?v=3.0" />
 </head>
 
 <body class="sidebar-layout">
@@ -112,7 +112,7 @@
                     <!-- Top Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../../assets/images/research/phase3/retinoscope_view.png" alt="검영기 뷰"
-                        class="phase3-vertical-right" style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
+                        class="phase3-vertical-right">
                       <figcaption class="overview-figcaption">검영기를 통한
                         반사광선 뷰</figcaption>
                     </figure>
@@ -123,7 +123,7 @@
                     <!-- Bottom Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../../assets/images/research/phase3/ir_pupil_image.png" alt="이진화 이미지 처리"
-                        class="phase3-vertical-right" style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
+                        class="phase3-vertical-right">
                       <figcaption class="overview-figcaption">이진화
                         이미지 처리</figcaption>
                     </figure>
@@ -167,7 +167,7 @@
                 <div style="margin-bottom: 1rem; text-align: center;">
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
-                      style="width: 158.11% !important; max-width: none !important; margin-left: -29.055% !important; display: block !important; height: auto !important;">
+                      class="phase3-ir-image" style="display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
                       패턴 투사 및 이미지 처리 파이프라인</figcaption>
                   </figure>
@@ -176,13 +176,13 @@
                 <div class="phase3-study2-mobile-stack" style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 104.49% !important; max-width: none !important; margin-left: -2.245% !important; display: block !important; height: auto !important;">
+                      class="phase3-physical-image" style="display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
-                      style="width: 94.095% !important; max-width: none !important; margin-left: 2.9525% !important; display: block !important; height: auto !important;">
+                      class="phase3-realtime-image" style="display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
@@ -235,7 +235,7 @@
                     <figure
                       class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
-                        style="width: 101.25% !important; max-width: none !important; margin-left: -0.625% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         적외선으로 낮은 조도에서도 선명한 이미지 획득
                       </figcaption>
@@ -243,7 +243,7 @@
                     <figure
                       class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
-                        style="width: 74.52% !important; max-width: none !important; margin-left: 12.74% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
                       </figcaption>
@@ -253,9 +253,9 @@
                     <figure
                       style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
-                        class="phase4-stimulus-image" style="width: 101.97% !important; max-width: none !important; margin-left: -0.985% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption">
-                        자극별 시계열 동공 반응 분석 (Pupil Response by Stimulus)
+                        자극별 시계열 동공 반응 분석
                       </figcaption>
                     </figure>
                   </div>
@@ -340,7 +340,7 @@
       window.location.replace("overview.html#phase-3");
     }
   </script>
-  <script src="../../assets/js/main.js?v=2.9" defer></script>
+  <script src="../../assets/js/main.js?v=3.0" defer></script>
 </body>
 
 </html>
