--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css?v=2.9" />
-  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.9" />
-  <link rel="stylesheet" href="../assets/css/components.css?v=2.9" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=3.0" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=3.0" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=3.0" />
 </head>
 
 <body class="sidebar-layout">
@@ -123,7 +123,7 @@
                     <!-- Top Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/retinoscope_view.png" alt="Retinoscope View"
-                        class="phase3-vertical-right" style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
+                        class="phase3-vertical-right">
                       <figcaption class="overview-figcaption">
                         Retinoscopy Optical System View</figcaption>
                     </figure>
@@ -134,7 +134,7 @@
                     <!-- Bottom Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/ir_pupil_image.png" alt="IR Pupil Image"
-                        class="phase3-vertical-right" style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
+                        class="phase3-vertical-right">
                       <figcaption class="overview-figcaption">IR
                         Camera Retinal Shadow Pattern</figcaption>
                     </figure>
@@ -202,7 +202,7 @@
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../assets/images/research/phase3/structured_light_process.jpg"
                       alt="Structured Light Pattern Image Processing"
-                      style="width: 158.11% !important; max-width: none !important; margin-left: -29.055% !important; display: block !important; height: auto !important;" />
+                      class="phase3-ir-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Infrared Pattern Projection & Image Processing Pipeline
                     </figcaption>
@@ -213,7 +213,7 @@
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/3d_reconstruction_method.png"
                       alt="3D Reconstruction Algorithm"
-                      style="width: 104.49% !important; max-width: none !important; margin-left: -2.245% !important; display: block !important; height: auto !important;" />
+                      class="phase3-physical-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Physical vs ML-based Hybrid Reconstruction
                     </figcaption>
@@ -221,7 +221,7 @@
                   <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
-                      style="width: 94.095% !important; max-width: none !important; margin-left: 2.9525% !important; display: block !important; height: auto !important;" />
+                      class="phase3-realtime-image" style="display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Real-time Corneo-Scleral 3D Analysis Software
                     </figcaption>
@@ -269,7 +269,7 @@
                       <figure
                         class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
-                          style="width: 101.25% !important; max-width: none !important; margin-left: -0.625% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          class="phase4-ir-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Clear image acquisition even in low light with IR
                         </figcaption>
@@ -277,7 +277,7 @@
                       <figure
                         class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
-                          style="width: 74.52% !important; max-width: none !important; margin-left: 12.74% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          class="phase4-realtime-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Automated calculation & output of 10 pupil metrics after real-time ROI detection
                         </figcaption>
@@ -287,9 +287,9 @@
                       <figure
                         style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
-                          class="phase4-stimulus-image" style="width: 101.97% !important; max-width: none !important; margin-left: -0.985% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          class="phase4-stimulus-image" style="display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption">
-                          Time-series Pupil Response Analysis by Stimulus
+                          Time-series Pupil Response Analysis
                         </figcaption>
                       </figure>
                     </div>
@@ -391,7 +391,7 @@
       window.location.replace("overview.html#phase-3");
     }
   </script>
-  <script src="../assets/js/main.js?v=2.9" defer></script>
+  <script src="../assets/js/main.js?v=3.0" defer></script>
 </body>
 
 </html>
